# GOL

./: .gitignore  CMakeLists.txt  EventHandler.cpp  EventHandler.h  GOL.cpp  GOL.h  README.md  Renderer.cpp  Renderer.h  main.cpp
include/: Board.hpp  Cell.hpp  Constants.hpp  GOL.h  Renderer.h
src/: Board.cpp  Cell.cpp  EventHandler.cpp  GOL.cpp  Renderer.cpp  main.cpp
